# demo-public-module

./: pyproject.toml
demo_public_module/: __init__.py  cli.py  main.py
