[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-module"
version = "0.1.0"
description = "A Python module with CLI capabilities"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "typer[all]>=0.9.0",
]

[project.scripts]
demo-module = "demo_public_module.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]